[metadata]
name=NekrodWidgets
version=0.0.1.1
author=NekrodNIK
description=Library of additional widgets for PySide6
long_description=file: README.md
long_description_content_type = text/markdown
url = https://github.com/NekrodNIK/NekrodWidgets
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=widgets
install_requires=
    PySide6
    importlib

python_requires = >=3.6

